--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Overlay SatelliteData</title>
+  <title>Overlay Satellite Data</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
   <style>
     #map {
@@ -16,7 +16,6 @@
   <div id="map"></div>
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
   <script>
-
     var map = L.map('map').setView([20, 0], 2);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -40,7 +39,6 @@
             if (overlay) {
               map.removeLayer(overlay);
             }
-
             var imageBounds = [[lat - 0.1, lon - 0.1], [lat + 0.1, lon + 0.1]]; 
             overlay = L.imageOverlay(imageUrl, imageBounds, { opacity: 0.7 });
             overlay.addTo(map);
@@ -52,17 +50,26 @@
     }
 
     function fetchWeatherData(lat, lon) {
-      var weatherApiKey = '5fb3f9fe062384b079f52fbb76862f31'; // Replace with your weather API key
+      var weatherApiKey = '5fb3f9fe062384b079f52fbb76862f31';
       var apiUrl = `https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${weatherApiKey}&units=metric`;
 
       fetch(apiUrl)
-        .then(response => response.json())
+        .then(response => {
+          if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+          }
+          return response.json();
+        })
         .then(data => {
-         
-          var weatherInfo = `Temperature: ${data.main.temp}°C<br>Weather: ${data.weather[0].description}`;
-          L.marker([lat, lon]).addTo(map)
-            .bindPopup(weatherInfo)
-            .openPopup();
+          console.log(data);
+          if (data.main && data.weather) {
+            var weatherInfo = `Temperature: ${data.main.temp}°C<br>Weather: ${data.weather[0].description}`;
+            L.marker([lat, lon]).addTo(map)
+              .bindPopup(weatherInfo)
+              .openPopup();
+          } else {
+            console.log('Weather data format is incorrect or not available.');
+          }
         })
         .catch(err => console.log('Error fetching weather data:', err));
     }
