--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
       }),
       "Wind Speed": L.tileLayer(`https://tile.openweathermap.org/map/wind_new/{z}/{x}/{y}.png?appid=5fb3f9fe062384b079f52fbb76862f31`, {
         attribution: 'Weather data &copy; OpenWeatherMap',
-        opacity: 0.8
+        opacity: 1.9,
+        className: 'dark-wind-layer'
       }),
       "Temperature": L.tileLayer(`https://tile.openweathermap.org/map/temp_new/{z}/{x}/{y}.png?appid=5fb3f9fe062384b079f52fbb76862f31`, {
         attribution: 'Weather data &copy; OpenWeatherMap',
@@ -130,6 +131,13 @@
         opacity: 0.8
       })
     };
+    const style = document.createElement('style');
+style.textContent = `
+  .dark-wind-layer {
+    filter: hue-rotate(100deg) brightness(0.5) contrast(1.5); /* Adjust brightness and contrast as needed */
+  }
+`;
+document.head.appendChild(style);
 
     weatherLayers["Precipitation"].addTo(map);
 
