fav updated main

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Overlay Satellite Data</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
+  <link rel="shortcut
+  icon" type="image/x-icon" href="https://farmernear.me/uploads/site/logos/16614567381-site_logo.png" />
+<link href="https://farmernear.me/uploads/site/logos/16614567381-site_logo.png" type="image/png" rel="icon" />
+
   <style>
     #map {
       height: 100vh;
